# grammatical-genetic-programming

./: CMakeLists.txt  README.MD  config.xml  config_reg.xml  gpufjf.cbp  gpufjf.depend  gpufjf.layout
docs/: index.html
input/data/: data_knn_60 (cópia).grp  data_knn_60.grp  velocity.data  velocity.grp
input/grammar/: velocity.gram
src/: Configures.h  Database.cpp  Database.h  Generations.cpp  Generations.h  Grammar.cpp  Grammar.h  ILogger.cpp  ILogger.h  No.cpp  Optimizer.h  Search.cpp  Search.h  SimpleClassifierParser.cpp  SimpleClassifierParser.h  SimpleMutation.cpp  SimpleParser.cpp  SimpleParser.h  SimpleReplace.cpp  StopCriterion.cpp  Subject.h  TournamentSelection.h  Tree.cpp  main.cpp
src/config/: Configures.cpp  Configures.h
src/evolutionaryCycle/populationReplacement/: PopulationReplacement.h  SimpleReplace.cpp  SimpleReplace.h
src/evolutionaryCycle/populationSelection/: Selection.h  TournamentSelection.cpp  TournamentSelection.h
src/evolutionaryCycle/stopCriterion/: Generations.cpp  Generations.h  StopCriterion.cpp  StopCriterion.h
src/individuals/: SimpleIndividuo.cpp  SimpleIndividuo.h  SimpleIndividuoBuilder.cpp  SimpleIndividuoBuilder.h  Subject.cpp  Subject.h
src/operators/: Crossover.h  Mutation.h  SimpleMutation.cpp  SimpleMutation.h
src/optimizers/: Optimizer.cpp  Optimizer.h
src/parsers/: Parser.cpp  Parser.h  SimpleClassifierParser.cpp  SimpleClassifierParser.h  SimpleParser.cpp  SimpleParser.h  SimpleRegressionParser.cpp  SimpleRegressionParser.h
utils/pugixml-1.9/scripts/: pugixml_codeblocks.depend  pugixml_codeblocks.layout
(+4 files in other folders)
